# FunTaxFinder

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
bioconda-recipe/funtaxfinder/: meta.yaml
examples/: asv_table.tsv  combined_KO_predicted.tsv  nitrogen_fixation_kos.txt  taxonomy.tsv
src/funtaxfinder/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
tests/data/: asv_table.tsv  combined_KO_predicted.tsv  taxonomy.tsv
